# Opticalflow-with-Motion-Magnification

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/: EVM.h  flow.h  getframe.h  outputframe.h  setting.h
src/: EVM.cpp  flow.cpp  framediff.cpp  getframe.cpp  main.cpp  outputframe.cpp  setting.cpp
